@@ -231,6 +231,7 @@ missing-statement:			warning		# not verified yet
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		unconformable
 continue-after:				unconformable
+goto-entry:				unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		BS2000
