@@ -229,6 +229,7 @@ missing-statement:			error
 zero-length-literals:			ok
 xml-generate-extra-phrases:		unconformable
 continue-after:				unconformable
+goto-entry:				unconformable
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		COBOL2014
